// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskFormModal Props should render component with prop show and value false 1`] = `
<Bootstrap(Modal)
  aria-labelledby="contained-modal-title-vcenter"
  centered={true}
  onHide={[MockFunction]}
  show={false}
  size="lg"
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      id="contained-modal-title-vcenter"
    >
      Create
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <Form
      inline={false}
    >
      <FormGroup>
        <FormLabel
          column={false}
          srOnly={false}
        >
          Name
        </FormLabel>
        <FormControl
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </FormGroup>
      <FormGroup>
        <FormLabel
          column={false}
          srOnly={false}
        >
          Due date
        </FormLabel>
        <FormControl
          name="dueDate"
          onChange={[Function]}
          type="date"
          value=""
        />
      </FormGroup>
    </Form>
  </ModalBody>
  <ModalFooter>
    <Button
      active={false}
      data-test="close-button"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
      variant="outline-secondary"
    >
      Close
    </Button>
    <Button
      active={false}
      data-test="save-button"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Save
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`TaskFormModal Props should render component with prop show and value true 1`] = `
<Bootstrap(Modal)
  aria-labelledby="contained-modal-title-vcenter"
  centered={true}
  onHide={[MockFunction]}
  show={true}
  size="lg"
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      id="contained-modal-title-vcenter"
    >
      Create
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <Form
      inline={false}
    >
      <FormGroup>
        <FormLabel
          column={false}
          srOnly={false}
        >
          Name
        </FormLabel>
        <FormControl
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </FormGroup>
      <FormGroup>
        <FormLabel
          column={false}
          srOnly={false}
        >
          Due date
        </FormLabel>
        <FormControl
          name="dueDate"
          onChange={[Function]}
          type="date"
          value=""
        />
      </FormGroup>
    </Form>
  </ModalBody>
  <ModalFooter>
    <Button
      active={false}
      data-test="close-button"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
      variant="outline-secondary"
    >
      Close
    </Button>
    <Button
      active={false}
      data-test="save-button"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Save
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;

exports[`TaskFormModal Props should render default component 1`] = `
<Bootstrap(Modal)
  aria-labelledby="contained-modal-title-vcenter"
  centered={true}
  onHide={[MockFunction]}
  size="lg"
>
  <ModalHeader
    closeButton={true}
    closeLabel="Close"
  >
    <ModalTitle
      id="contained-modal-title-vcenter"
    >
      Create
    </ModalTitle>
  </ModalHeader>
  <ModalBody>
    <Form
      inline={false}
    >
      <FormGroup>
        <FormLabel
          column={false}
          srOnly={false}
        >
          Name
        </FormLabel>
        <FormControl
          name="name"
          onChange={[Function]}
          type="text"
          value=""
        />
      </FormGroup>
      <FormGroup>
        <FormLabel
          column={false}
          srOnly={false}
        >
          Due date
        </FormLabel>
        <FormControl
          name="dueDate"
          onChange={[Function]}
          type="date"
          value=""
        />
      </FormGroup>
    </Form>
  </ModalBody>
  <ModalFooter>
    <Button
      active={false}
      data-test="close-button"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
      variant="outline-secondary"
    >
      Close
    </Button>
    <Button
      active={false}
      data-test="save-button"
      disabled={false}
      onClick={[Function]}
      type="button"
      variant="primary"
    >
      Save
    </Button>
  </ModalFooter>
</Bootstrap(Modal)>
`;
